Impostato cloudinary e testati i vari endpoitn anche per foto. Sistemata l implementazioen di escursioni , citta e regioni. Riempito il database con date fino a 6 mesi dalla creazioen di un escursione , sistemati tuti gli endpoint delle prenotazioni , escursioni e Admin , implemetata la logica per uci una dmin puo fare determiante cose e un utente no , creati endpoint per l admin tra post e escurisoni , aggiunta la funzionaltia dimettere escursioni nei preferiti e lasciare le recenzioni